@@ -1,5 +1,9 @@
 Release 2.1.1 - ???
 
+   * Fix Open Office mime types to be subclasses of application/zip
+     and no longer require OPCPackageDetector-last ordering of zip
+     detectors (TIKA-3556).
+
    * Improve robustness and features of the httpfetcher (TIKA-3543)
    
    * Add optional fetch ranges to FetchEmitTuple to allow range fetching from,
